[project]
name = "azure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pulumi-azure-native>=2.11.0",
    "pulumi>=3",
    "pulumi-azuread>=6.2.0",
    "pulumi-random>=4.17.0",
    "pulumi-tls>=5.1.0",
    "pulumi-kubernetes>=4.21.1",
    "pulumi-kubernetes-ingress-nginx>=0.1.2",
]
